Prevent line breaks in register text

--- a/quantum-computing-edu-next/app/components/circuit.module.css
+++ b/quantum-computing-edu-next/app/components/circuit.module.css
@@ -67,6 +67,7 @@
   justify-content: center;
   align-items: center;
   overflow: visible;
+  white-space: nowrap;
   
   margin: auto;
 }
